adjusted height of filters to avoid scrollbars

--- a/app/sass/components/_pages-search.scss
+++ b/app/sass/components/_pages-search.scss
@@ -232,7 +232,7 @@ $ancho: $unidad * 2;
         @include reset-list();
         overflow: hidden;
         overflow-y: auto;
-        max-height: 200px;
+        max-height: 450px;
     }
 
     label, input {
